Resolved issue where two landing buttons would overflow their section on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,8 @@ button {
 
 #landing {
 	width: 100%;
-	height: 100vh;
-	padding: 20px;
+	min-height: 100vh;
 	overflow: visible;
-
 	display: flex;
 	flex-direction: column;
 	align-items: center;
